server/error.txt
Cloudinary connected
D:\LMS\EduNest_Udemy_Upgrade\server\controllers\Announcement.js:14
    const course = await Course.findById(courseId).select("studentsEnroled courseName")
          ^

SyntaxError: Identifier 'course' has already been declared
    at internalCompileFunction (node:internal/vm:77:18)
    at wrapSafe (node:internal/modules/cjs/loader:1290:20)
    at Module._compile (node:internal/modules/cjs/loader:1342:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1437:10)
    at Module.load (node:internal/modules/cjs/loader:1212:32)
    at Module._load (node:internal/modules/cjs/loader:1028:12)
    at Module.require (node:internal/modules/cjs/loader:1237:19)
    at require (node:internal/modules/helpers:176:18)
    at Object.<anonymous> (D:\LMS\EduNest_Udemy_Upgrade\server\routes\Announcement.js:4:98)
    at Module._compile (node:internal/modules/cjs/loader:1378:14)

Node.js v21.6.1
